Fixed a code error on successfull delete 201=>204 Now use proper REST url to add and delete user (i.e @POST / @DELETE user/{idToDelete})
